grammars/constants-expression/test/corpus/conditionals.txt
==================================================
If else
==================================================

|n| if n == 9 { 0 } else { n + 1 }

---

(closure
  parameters: (parameters
    (parameter
      (identifier)))
  body: (if_expression
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (block
      (integer))
    alternative: (block
      (binary_expression
        left: (identifier)
        right: (integer)))))

==================================================
Else if
==================================================

|n| if n < 0 { -1 } else if n > 0 { 1 } else { 0 }

---

(closure
  parameters: (parameters
    (parameter
      (identifier)))
  body: (if_expression
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (block
      (unary_expression
        operand: (integer)))
    alternative: (if_expression
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (block
        (integer))
      alternative: (block
        (integer)))))

==================================================
If as an operand
==================================================

|n| 1 + if n > 1 { n } else { 1 }

---

(closure
  parameters: (parameters
    (parameter
      (identifier)))
  body: (binary_expression
    left: (integer)
    right: (if_expression
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (block
        (identifier))
      alternative: (block
        (integer)))))

==================================================
Nested conditions
==================================================

|a, b| if (a > 0) && !(b > 0) { a } else { b }

---

(closure
  parameters: (parameters
    (parameter
      (identifier))
    (parameter
      (identifier)))
  body: (if_expression
    condition: (binary_expression
      left: (parenthesized_expression
        (binary_expression
          left: (identifier)
          right: (integer)))
      right: (unary_expression
        operand: (parenthesized_expression
          (binary_expression
            left: (identifier)
            right: (integer)))))
    consequence: (block
      (identifier))
    alternative: (block
      (identifier))))
